--- a/public/V3/SubTable/Js/subTableInsert/config.json
+++ b/public/V3/SubTable/Js/subTableInsert/config.json
@@ -1,4 +1,7 @@
 {
     "PostendPoint": "/V1/Saleshead/SubTable/Insert/InsertAsIs",
-    "GetEndPoint": "/V1/Saleshead/SubTable/Read/AsIs"
+    "GetEndPoint": "/V1/Saleshead/SubTable/Read/AsIs",
+    "AlterEndPoint":"/V1/Saleshead/SubTable/Alter/WithPk",
+    "RowData":"/V1/Saleshead/SubTable/Read/RowData",
+    "DeleteEndPoint":"/V1/Saleshead/SubTable/Delete/WithPk"
 }
